# assessment-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml
docker/: config.yml  entrypoint.sh  nginx.conf
docker/init-db/: 0001_initial.sql
migrations/: 0001_initial.sql
songs_api/: apply_migrations.py  config.py  database.py  database_access.py  db_models.py  endpoints.py  main.py  models.py
tests/: conftest.py  test_data_builder.py  test_database_access.py  test_endpoints.py
